# ai-analyst

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/sample/docs/: company_overview.md  operations_playbook.md  policy_notes.md  risks.md  roadmap_notes.md
data/sample/tables/: quarterly_metrics.csv  spend_tracker.csv
eval/: eval_set.json
src/grounded_analyst/: __init__.py  cli.py  evaluator.py  grounding.py  ingestion.py  logging_utils.py  models.py  pipeline.py  retrieval.py  ui.py  vague_question.py
src/grounded_multimodal_analyst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
